@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190331"
-#define public MagickPackageReleaseDate "snapshot-20190331"
+#define public MagickPackageVersionAddendum ".020190402"
+#define public MagickPackageReleaseDate "snapshot-20190402"
