@@ -1,5 +1,5 @@
 /*
-  Copyright (C) 2003 - 2018 GraphicsMagick Group
+  Copyright (C) 2003 - 2019 GraphicsMagick Group
 
   This program is covered by multiple licenses, which are described in
   Copyright.txt. You should have received a copy of Copyright.txt with this
@@ -12,22 +12,21 @@
 #ifndef _MAGICK_MODULE_ALIASES_H
 #define _MAGICK_MODULE_ALIASES_H
 
-typedef struct ModuleAlias
-{
-  char
-    *magick,
-    *name;
-  const unsigned int
-     magick_len;
-} ModuleAlias;
-
 /*
   This list must be ordered by 'magick' in an ascending order matching
   strcmp().
 */
-static ModuleAlias
-ModuleAliases[] =
-  {
+static const struct
+{
+    const char
+        magick[10],
+        name[10];
+
+    const unsigned char
+        magick_len;
+
+} ModuleAliases[] =
+{
 #define MODULEALIAS(magick,name) {magick,name,sizeof(magick)-1}
     MODULEALIAS("3FR","DCRAW"),
     MODULEALIAS("8BIM","META"),
